   which will enable prompts to be played back using a Japanese grammatical
   structure. Additional prompts are necessary for this functionality,
   including:
   - jb-arimasu: there is
   - jb-arimasen: there is not
   - jb-oshitekudasai: please press
   - jb-ni: article ni
   - jb-ga: article ga
   - jb-wa: article wa
   - jb-wo: article wo

res_config_pgsql
------------------
 * Added the ability to support PostgreSQL application_name on connections.
   This allows PostgreSQL to display the configured name in the
   pg_stat_activity view and CSV log entries. This setting is configurable
   for res_config_pgsql via the dbappname configuration setting in
   res_pgsql.conf.

MixMonitor
------------------
 * New options to play a beep when starting a recording and stopping a recording
   have been added.  The option "p" will play a beep to the channel that starts
   the recording.  The option "P" will play a beep to the channel that stops the
   recording.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12.4.0 to Asterisk 12.5.0 ------------
------------------------------------------------------------------------------

ARI
------------------
 * Stored recordings now support a new operation, copy. This will take an
   existing stored recording and copy it to a new location in the recordings
   directory.

 * LiveRecording objects now have three additional fields that can be reported
   in a RecordingFinished ARI event:
   - total_duration: the duration of the recording
   - talking_duration: optional. The duration of talking detected in the
     recording. This is only available if max_silence_seconds was specified
     when the recording was started.
   - silence_duration: optional. The duration of silence detected in the
     recording. This is only available if max_silence_seconds was specified
     when the recording was started.
   Note that all duration values are reported in seconds.
